add: page functionality